<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
   	android:fillViewport="true" >
   	
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="#ffffff">

         <!--  Quitar el foco de los editText y mostrar toda la activity -->
        <LinearLayout 

            android:focusable="true"
            android:focusableInTouchMode="true" 
            android:layout_width="0px"
            android:layout_height="0px" >
           <requestFocus />
        </LinearLayout>
        
    <!-- Header Start -->        
<LinearLayout
    	  android:id="@+id/welcome"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
       
    <!-- Welcome Label -->   
		  <TextView 
		      android:id="@+id/saludoinicial"
		      android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#33B5E5"
              android:textSize="20sp"
              android:gravity="start"
              android:text="@string/LogNombre"
              android:selectAllOnFocus="true"
              /> 

    		<TextView 
    		  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
        	  android:layout_marginBottom="5dip"
               />
    		
    		<!-- Nombre de la pieza Label -->   
		  <TextView 
		      android:id="@+id/textNpiezaR"
		      android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#33B5E5"
              android:layout_marginTop="5dip"
        	  android:layout_marginBottom="5dip"
              android:textSize="15sp"
              android:gravity="left"
              android:text="@string/txtPiezaSol"/> 

    		
              
    		<TextView
           
        android:id="@+id/textCostoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="$"
        android:gravity="left"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:background="#33B5E5"
        android:textSize="15sp"
        />
    		
    		<TextView 
		      android:id="@+id/txtRealPago"
		      android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#33B5E5"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="5dip"
              android:textSize="15sp"
              android:text="@string/txtRealizarPago"/> 
    		
    		
</LinearLayout>  
<!-- Header Ends -->




<!-- Form Banco Start -->
<TableLayout 
   android:id="@+id/tabLayBanco"
   			android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*" 
            android:stretchColumns="*" 
   android:layout_below="@id/welcome"
   >
    <!-- Row Banco -->		
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView
           
        android:id="@+id/txtBanco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBanco"
		android:textColor="#33B5E5"
		android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        
        />
        <TextView
         
        android:id="@+id/txtNomBanco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNomBanco"
		android:textColor="#33B5E5"
		android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        
        />
    </TableRow>
    
    
    <!-- Row Nombre -->		
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView
            
        android:id="@+id/txtPerso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNomPersonaBanco"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"/>
        <TextView
          
        android:id="@+id/txtNomPer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPerBanco"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"/>
    </TableRow>
    
    <!-- Row Cuenta -->		
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView
          
        android:id="@+id/txtNumCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumCuenta"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"/>
        <TextView
            
        android:id="@+id/txtCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCuenta"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"/>
    </TableRow>
    
   <!-- Row Clabe 	-->
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView
            
        android:id="@+id/txtClabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtClabe"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"
        />
        <TextView
           
        android:id="@+id/txtClabeBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtClabeBanco"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"
        />
    </TableRow>
    
    
    
    
    <!-- Row Espacio -->
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView 
              
    		  android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="5dip"
               android:layout_weight="1" />
        <TextView 
              
    		  android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="5dip"
              android:layout_weight="1" />
    </TableRow>
    
     <!-- Row text confirmar pago -->	
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        
        <TextView 
        
        android:id="@+id/txtConfirPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtConfirPago"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_span = "2"
        
        />
       
    </TableRow>
    
     <!-- Row text Telefono 1 -->	
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        
        <TextView 
        
        android:id="@+id/txtTel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTel1"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_span = "2"
        
        />
       
    </TableRow>
    
     <!-- Row text Telefono 2 -->	
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        
        <TextView 
        
        android:id="@+id/txtTel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTel2"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_span = "2"
        
        />
       
    </TableRow>
    
      <!-- Row text ¿Realizo deposito? -->	
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        
        <TextView 
        
        android:id="@+id/txtYaRealizoPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtYaRealizoPago"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_span = "2"
        
        />
       
    </TableRow>
    
    
    <!-- Row chkbox -->	
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        
        <CheckBox
            
            android:id="@+id/check_pagoTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pagoTotalRelaizado" 
            android:textColor="#33B5E5"
        	android:layout_marginBottom="5dip"
            android:text="@string/chkPagTotal" 
            android:textSize="14sp"
            android:layout_weight="1"/>
       
    </TableRow>
 
    
  </TableLayout>  
  
 <!-- Linear anexzar cmprobante  Start -->       
 <LinearLayout
    	  android:id="@+id/linAnexComp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/tabLayBanco"
          >
    
        <TextView 
        android:id="@+id/txtAnexCom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txtAnexComp"
        android:textColor="#33B5E5"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:visibility="visible"
        />
        
 </LinearLayout>  
<!-- Linear anexar comprobante Ends -->  


<!-- Form Banco Start -->
<TableLayout 
   android:id="@+id/tabLayFactura"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:stretchColumns="1"
   android:layout_below="@id/linAnexComp"
   >     

     <!-- Row Seleccionar imagen -->		
    <TableRow >
       <Spinner
          
        android:id="@+id/spinExaminarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="visible"
       />  
    </TableRow>
    
    <!-- Row Seleccionar imagen -->		
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal" >
      <TextView
        android:layout_span="2"
        android:id="@+id/textRecibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoImg"
        android:background="#33B5E5"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:visibility="visible"/>
    </TableRow>
    
    
    <!-- Row Espacio -->
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView 
              android:layout_column="0"
    		  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip"
               />
        <TextView 
              android:layout_column="1"
    		  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip"
               />
    </TableRow>
    
    <!-- Row chkbox Factura -->		
    <TableRow >
        
       <CheckBox
            android:layout_column="0" 
            android:id="@+id/chkFactR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="facturar" 
            android:textColor="#33B5E5"
            android:text="@string/chkFactura"
            android:textSize="14sp" />
    </TableRow>
    
    
    
    <!-- Row FRC -->		
    <TableRow >
        <TextView
            
        android:id="@+id/txtRFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFacRfc"
        android:textColor="#33B5E5"
        android:layout_weight="0.2"
        />
        <EditText
             
            android:id="@+id/editRFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:lines="2"
            android:layout_weight="1"
            />
    </TableRow >
    
    <!-- Row Direccion -->		
    <TableRow >
        <TextView
        
        android:id="@+id/txtFacDirec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFacDirecc"
        android:textColor="#33B5E5"
        android:layout_weight="0.2"
        />
        <EditText
            
            android:id="@+id/editDirFiscR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:lines="3"
            android:layout_weight="1"
            />
    </TableRow >
    
    <!-- Row Email -->		
    <TableRow >
        <TextView
           
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFactEmail"
        android:textColor="#33B5E5"
        android:layout_marginTop="15dip"
        android:layout_weight="0.2" />
        
        <EditText
            
            android:id="@+id/editEmailR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:lines="2"
            android:layout_marginTop="15dip"
            android:layout_weight="1"/>
    </TableRow>
    
    <!-- Row Espacio -->
    <TableRow android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal">
        <TextView 
              
    		  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip"
               />
        <TextView 
              
    		  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="1sp"
              android:background="#FFBB33"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip"
               />
    </TableRow>
    				
 </TableLayout>
<!-- Form Ends -->





<!-- Linear Form Star -->
<LinearLayout
    	  android:id="@+id/linForm"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/tabLayFactura"
          >
    
     <!-- Datos de entrega Label -->   
		  <TextView 
		      android:id="@+id/txtDatosEntrega"
		      android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#33B5E5"
              android:layout_marginBottom="5dip"
              android:text="@string/txtDatoEntrega"/> 
              
	<EditText
        android:id="@+id/editDirEntregaR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textSize="14sp"
         />
 		
</LinearLayout>  
    
    
<!-- Linear For Ends -->


<!-- Footer Start -->

<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/linForm"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <!-- Logo Start -->

    <ImageView
        android:id="@+id/imageFooter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/footer_repeat" />
    <!-- Logo Ends -->

	<!-- 
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageFooter"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="12dp"
        android:background="@null"
        android:onClick="Send_Solicitud"
        android:src="@drawable/btn_enviarsolicitud" />
		-->
		<Button
        android:id="@+id/buttonComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageFooter"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btnvacio"
        android:onClick="Enviar_DatosCompra"
        android:text="@string/btnEnvSol" 
        android:textColor="#FFFFFF"
        />


</RelativeLayout>

<!-- Footer Ends -->
    
    
    </RelativeLayout>
</ScrollView>